Fixed typos in manpage, fixes issue #22

--- a/usr/share/man/man8/fwkit.8
+++ b/usr/share/man/man8/fwkit.8
@@ -12,9 +12,9 @@ fwkit \- Firewall Kit for modular firewalls
 .br
 \fBfwkit role set \fIrole\fR
 .br
-.fBfwkit role\fR { \fBdefine\fR | \fBundefine\fR } \fIrole\fR \fIpolicy\fR [ \fIdescription\fR ]
+\fBfwkit role\fR { \fBdefine\fR | \fBundefine\fR } \fIrole\fR \fIpolicy\fR [ \fIdescription\fR ]
 .br
-\fBfwkit zone\fR \fBdefine\fR \fIname source\R [ \FIdescription\fR ]
+\fBfwkit zone\fR \fBdefine\fR \fIname source\fR [ \fIdescription\fR ]
 .br
 \fBfwkit zone\fR \fBundefine\fR \fIname\fR
 .br
